--- a/app/index.html
+++ b/app/index.html
@@ -6,57 +6,51 @@
 	<meta charset="utf-8">
 	<!-- <base href="/"> -->
 
-	<title>Starter</title>
+
+	<title>Starter html template</title>
 	<meta name="description" content="">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	
-	<!-- Template Basic Images Start -->
+	<!-- Images -->
 	<meta property="og:image" content="path/to/image.jpg">
 	<link rel="icon" href="img/favicon/favicon.ico">
 	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon-180x180.png">
-	<!-- Template Basic Images End -->
+	<!-- Images End -->
 	
 	<!-- Custom Browsers Color Start -->
 	<meta name="theme-color" content="#000">
 	<!-- Custom Browsers Color End -->
 
+	<!-- Ваш CSS -->
 	<link rel="stylesheet" href="css/main.css">
 
 </head>
 
 <body>
 
-	<!-- Custom HTML -->
-
+	<!-- Ваш HTML -->
 	<div class="container">
-
 		<div class="row">
-
 			<div class="col-8 offset-2">
 				<h1>Пустой стартовый шаблон для кастомной разработки верстки под любые задачи</h1>
-				<ul>
-					<li>
-						Reset от бутстрапа
-					</li>
-					<li>
-						Глобальные стили
-					</li>
-					<li>
-						Шрифты
-					</li>
-					<li>
-						Компрессия и стили
-						и куча-куча всего интересного
-					</li>
-				</ul>
 			</div>
-			
 		</div>
-
 	</div>
 
+	<!--===== HEADER =====-->
+
+	<!--===== SECTION =====-->
+	<!--===== SECTION =====-->
+	<!--===== SECTION =====-->
+	<!--===== SECTION =====-->
+	<!--===== SECTION =====-->
+	<!--===== SECTION =====-->
+
+	<!--===== FOOTER =====-->
+
+	<!-- Ваш скрипт -->
 	<script src="js/common.min.js"></script>
 
 </body>
